# kakao-history-packager

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
sample/: ATTRIBUTION.md  Talk_2025.1.1 12:00-1.txt
sample/Kakaotalk_Chat_아빠_20250108_200000/: Talk_2025.1.8 20:00-1.txt
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/cli/: builder.ts  generate-sample-data.ts  index.ts  media-matcher.ts  parser.ts  test-parser.ts  types.ts  validator.ts
src/viewer/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/viewer/src/: App.svelte
src/viewer/src/components/: ChatView.svelte  DateSeparator.svelte  Drawer.svelte  DrawerWindow.svelte  Header.svelte  InputArea.svelte  MediaPopup.svelte  MediaViewerWindow.svelte  MessageBubble.svelte  SearchBar.svelte  SettingsModal.svelte  VirtualScroller.svelte
src/viewer/src/lib/: tauri.ts
src/viewer/src/stores/: chat.ts  search.ts  settings.ts  ui.ts
src/viewer/src/styles/: global.css
