[package]
name = "kakao-chat-viewer"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "kakao_chat_viewer_lib"
crate-type = ["lib", "cdylib", "staticlib"]
